# ocaml

./: .gitignore  CHANGES.md  LICENSE.md  Makefile  NOTICE  README.adoc  README.md  conf-zap.opam  dune-project  zap.opam
.github/workflows/: ci.yml
src/benchmark/: carsales.zap  catrank.zap  dune  eval.zap  main.ml  methods.ml  testCaseSig.ml  zapCarsales.ml  zapCatrank.ml  zapEval.ml
src/benchmark/fastRand/: fastRand.ml  fast_rand.c
src/compiler/: defaults.ml  defaults.mli  dune  genCommon.ml  genModules.ml  genSignatures.ml  generate.ml  main.ml  pluginSchema.ml  pluginSchema.mli
src/examples/1/: dune  example1.ml
src/examples/2/: dune  example2.ml  shape.zap
src/runtime/: builderInc.ml  builderOps.ml  bytesStorage.ml  cArray.ml  cArray.mli  codecs.ml  codecs.mli  codecsSig.ml  commonInc.ml  dune  farPointer.ml  fragmentBuffer.ml  fragmentBuffer.mli  innerArray.ml  innerArray.mli  message.ml  message.mli  messageSig.ml  messageStorage.ml  otherPointer.ml  packing.ml  pointer.ml  rPC.ml  readerInc.ml  structPointer.ml  util.ml  zap.ml
src/tests/: c++.zap  dune  test-iface-import.zap  test-import.zap  test.zap  testBytesStorage.ml  testCodecs.ml  testEncoding.ml  testLists.zap  testMisc.ml
src/unix/: dune  iO.ml  iO.mli
