(executable
 (name main)
 (enabled_if (= %{architecture} amd64))
 (libraries zap zap_unix fast_rand base)
 (ocamlopt_flags :standard -O3 -inline 2000))

(rule
 (targets carsales)
 (enabled_if (= %{architecture} amd64))
 (deps main.exe)
 (action
  (run ln main.exe %{targets})))

(rule
 (targets catrank)
 (enabled_if (= %{architecture} amd64))
 (deps main.exe)
 (action
  (run ln main.exe %{targets})))

(rule
 (targets eval)
 (enabled_if (= %{architecture} amd64))
 (deps main.exe)
 (action
  (run ln main.exe %{targets})))

(rule
 (targets carsales.ml carsales.mli)
 (action
  (run zap compile -o %{bin:zapc-ocaml} %{dep:carsales.zap})))

(rule
 (targets catrank.ml catrank.mli)
 (action
  (run zap compile -o %{bin:zapc-ocaml} %{dep:catrank.zap})))

(rule
 (targets eval.ml eval.mli)
 (action
  (run zap compile -o %{bin:zapc-ocaml} %{dep:eval.zap})))

(alias
 (name benchmarks)
 (deps carsales catrank eval))
