(test
 (name run_tests)
 (libraries zap ounit2 base_quickcheck))

(rule
 (targets
  test.ml               test.mli
  test_iface_import.ml  test_iface_import.mli
  test_import.ml        test_import.mli
  c2b2b.ml              c2b2b.mli
  testLists.ml          testLists.mli
  testCycles.ml         testCycles.mli)
 (deps
  c++.zap
  test.zap
  test-import.zap
  test-iface-import.zap
  testLists.zap
  testCycles.zap)
 (action
  (run zap compile -o %{bin:zapc-ocaml} %{deps})))
