(executable
  (name example1)
  (libraries zap))

; This rule tells dune how to generate foo.ml and foo.mli by compiling foo.zap against the ZAP compiler
; PLEASE NOTE that zapc must exist on your computer for this to work (https://zap-proto.io/docs/install)
(rule 
  (targets foo.ml foo.mli)
  (action (run zap compile -o %{bin:zapc-ocaml} %{dep:foo.zap})))
